Make ffserver work, some small fixes.

--- a/ffmpeg/ffserver.conf
+++ b/ffmpeg/ffserver.conf
@@ -11,6 +11,7 @@ CustomLog -
 ACL allow localhost
 #Launch ffmpeg -i http://10.10.1.1:8196  -c copy "http://localhost:8090/feed1.ffm"
 Launch ffmpeg -i http://10.10.1.1:8196  -c copy
+#Launch ffmpeg -f mjpeg -i http://10.10.1.1:8196 -c:v mpeg4 -quality realtime 
 </Feed>
 
 <Stream status.html>
@@ -18,49 +19,94 @@ Format status
 ACL allow localhost
 </Stream>
 
-<Stream test.mjpg>
-Feed feed1.ffm
-Format mpjpeg
-VideoSize 320x240
-#VideoFrameRate 2
-VideoIntraOnly
-NoAudio
-Strict -1
+<Stream test.swf>
+  Feed feed1.ffm
+  Format swf
+  VideoCodec flv
+  VideoSize 320x240
+  VideoFrameRate 30 
+  VideoIntraOnly
+  NoAudio
 </Stream>
 
-#<Stream test.swf>
-#Feed feed1.ffm
-#Format swf
-#VideoSize 320x240
-##VideoFrameRate 2
-#VideoIntraOnly
-#NoAudio
+#<Stream test.webm>
+#  Feed feed1.ffm
+#  Format webm
+#  Noaudio
+#  VideoCodec libvpx
+#  VideoSize 320x240
+#  VideoFrameRate 30
+#  AVOptionVideo flags +global_header
+#  AVOptionVideo cpu-used 0
+#  AVOptionVideo qmin 10
+#  AVOptionVideo qmax 42
+#  AVOptionVideo quality good
+#  PreRoll 15
+#  StartSendOnKey
+#  VideoBitRate 400
 #</Stream>
 
-<Stream test.swf>
-   Feed feed1.ffm
-   Format swf
-   VideoCodec flv
-   VideoFrameRate 30 
-   VideoBufferSize 80000
-   VideoBitRate 100
-   VideoQMin 1
-   VideoQMax 5
-   VideoSize 320x240
-   PreRoll 0
-   Noaudio
-</Stream>
+#<Stream test.mjpg>
+#  Feed feed1.ffm
+#  Format mpjpeg
+#  VideoSize 320x240
+##  VideoFrameRate 2
+#  VideoIntraOnly
+#  NoAudio
+#  Strict -1
+#</Stream>
+
+#<Stream test.mp4>
+#  Feed feed1.ffm
+#  Format mp4
+#  Noaudio
+#  VideoCodec libx264
+#  VideoSize 320x240
+#  VideoFrameRate 30
+#  AVOptionVideo flags +global_header
+#</Stream>
+
+#<Stream test.swf>
+#   Feed feed1.ffm
+#   Format swf
+#   VideoCodec flv
+#   VideoFrameRate 30 
+#   VideoBufferSize 80000
+#   VideoBitRate 100
+#   VideoQMin 1
+#   VideoQMax 5
+#   VideoSize 320x240
+#   PreRoll 0
+#   Noaudio
+#</Stream>
 
 #<Stream test.asf>
-#Feed feed1.ffm
-#Format asf
-#VideoFrameRate 15
-#VideoSize 352x240
-#VideoBitRate 256
-#VideoBufferSize 40
-#VideoGopSize 30
-#AudioBitRate 64
-#StartSendOnKey
+#  Feed feed1.ffm
+#  Format asf
+#  VideoFrameRate 30 
+#  VideoSize 352x240
+#  VideoBitRate 256
+#  VideoBufferSize 40
+#  VideoGopSize 30
+#  Noaudio
+#  StartSendOnKey
+#</Stream>
+
+#<Stream test.mp4>
+#  Feed feed1.ffm
+#  Format mp4
+#  Noaudio
+#  VideoCodec mpeg4 
+#  VideoSize 320x240
+#  VideoFrameRate 30
+#  AVOptionVideo flags +global_header
+#  AVOptionVideo cpu-used 0
+#  AVOptionVideo qmin 10
+#  AVOptionVideo qmax 42
+#  AVOptionVideo quality good
+#  PreRoll 15
+#  StartSendOnKey
+#  VideoBitRate 400
 #</Stream>
 
 #<Stream test_h.avi>
@@ -101,7 +147,7 @@ Strict -1
 #VideoFrameRate 10
 #VideoSize 352x288
 #VideoBitRate 100
-#VideoGopSize 30
+##VideoGopSize 30
 #NoAudio
 #PreRoll 10
 #StartSendOnKey
